<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/title_film"/>

    <item
        android:id="@+id/item_tv"
        android:icon="@drawable/ic_tv"
        android:title="@string/title_tv"/>
</menu>