...
        app:layout_constraintTop_toTopOf="parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollIndicators="right">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_film"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/list_item">
            </androidx.recyclerview.widget.RecyclerView>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
...
